--- a/package.json
+++ b/package.json
@@ -10,20 +10,18 @@
     "start": "node api/index.js",
     "dev": "nodemon api/index.js"
   },
-
   "engines": {
     "node": ">=18"
   },
-
-  
   "dependencies": {
     "@langchain/classic": "^1.0.5",
     "@langchain/core": "^1.1.0",
-    "@langchain/google-genai": "^0.0.18",
-    "@langchain/openai": "^0.0.18",
+    "@langchain/google-genai": "^2.1.3",
+    "@langchain/openai": "^1.2.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "chromadb": "^3.1.6",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
@@ -33,6 +31,7 @@
     "langchain": "^1.1.1",
     "mongoose": "^8.20.1",
     "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^2.2.1",
     "node-fetch": "^2.7.0",
     "nodemailer": "^7.0.10",
     "openai": "^6.9.0",
